[Media Controls] Stop controls from hiding during keyboard interaction

This CL fixes an issue where the controls were relying on the panel
element to receive keypress events to reset the hide timer. Instead, we
want to reset the timer when the button panel receives keypress events,
because the button panel will stop propagation of keypress events
before the panel sees them.

Bug: 924019
Change-Id: Ic85c023047c20cafe91da419a77c827ad619d632
Reviewed-on: https://chromium-review.googlesource.com/c/1426899
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624880}
Former-commit-id: 1e6db3ab947b5926b1aa2aa93eb7234f4a55297c