third_party/blink/renderer/modules/media_controls/media_controls_impl_test.cc
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/testing/page_test_base.h"
 #include "third_party/blink/renderer/modules/media_controls/elements/media_control_current_time_display_element.h"
 #include "third_party/blink/renderer/modules/media_controls/elements/media_control_download_button_element.h"
+#include "third_party/blink/renderer/modules/media_controls/elements/media_control_mute_button_element.h"
 #include "third_party/blink/renderer/modules/media_controls/elements/media_control_overflow_menu_list_element.h"
 #include "third_party/blink/renderer/modules/media_controls/elements/media_control_remaining_time_display_element.h"
 #include "third_party/blink/renderer/modules/media_controls/elements/media_control_timeline_element.h"
@@ -255,6 +256,9 @@ class MediaControlsImplTest : public PageTestBase,
   MediaControlRemainingTimeDisplayElement* GetRemainingTimeDisplayElement()
       const {
     return media_controls_->duration_display_;
+  }
+  MediaControlMuteButtonElement* MuteButtonElement() const {
+    return media_controls_->mute_button_;
   }
   MockWebMediaPlayerForImpl* WebMediaPlayer() {
     return static_cast<MockWebMediaPlayerForImpl*>(
@@ -1050,17 +1054,17 @@ TEST_F(MediaControlsImplTestWithMockScheduler,
 
   // Tabbing between controls prevents controls from hiding.
   platform()->RunForPeriodSeconds(2);
-  MediaControls().DispatchEvent(*Event::Create("focusin"));
+  MuteButtonElement()->DispatchEvent(*Event::CreateBubble("focusin"));
   platform()->RunForPeriodSeconds(2);
   EXPECT_TRUE(IsElementVisible(*panel));
 
   // Seeking on the timeline or volume bar prevents controls from hiding.
-  MediaControls().DispatchEvent(*Event::Create("input"));
+  TimelineElement()->DispatchEvent(*Event::CreateBubble("input"));
   platform()->RunForPeriodSeconds(2);
   EXPECT_TRUE(IsElementVisible(*panel));
 
   // Pressing a key prevents controls from hiding.
-  MediaControls().PanelElement()->DispatchEvent(*Event::Create("keypress"));
+  MuteButtonElement()->DispatchEvent(*Event::CreateBubble("keypress"));
   platform()->RunForPeriodSeconds(2);
   EXPECT_TRUE(IsElementVisible(*panel));
 
@@ -1337,10 +1341,8 @@ TEST_F(MediaControlsImplTestWithMockScheduler,
 
   WebTestSupport::SetIsRunningWebTest(false);
 
-  Element* volume_slider = GetElementByShadowPseudoId(
-      MediaControls(), "-webkit-media-controls-volume-slider");
-  Element* mute_btn = GetElementByShadowPseudoId(
-      MediaControls(), "-webkit-media-controls-mute-button");
+  Element* volume_slider = VolumeSliderElement();
+  Element* mute_btn = MuteButtonElement();
 
   ASSERT_NE(nullptr, volume_slider);
   ASSERT_NE(nullptr, mute_btn);
@@ -1382,8 +1384,7 @@ TEST_F(MediaControlsImplTestWithMockScheduler,
 
   WebTestSupport::SetIsRunningWebTest(false);
 
-  Element* volume_slider = GetElementByShadowPseudoId(
-      MediaControls(), "-webkit-media-controls-volume-slider");
+  Element* volume_slider = VolumeSliderElement();
 
   ASSERT_NE(nullptr, volume_slider);
 
